[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "kuka_remote_control"
version = "0.0.1"
authors = [{ name = "Zen Shawn", email = "xiaozisheng2008@hotmail.com" }]
description = "Control KUKA robot via socket"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/xiaodaxia-2008/kuka_remote_controller"
"Bug Tracker" = "https://github.com/xiaodaxia-2008/kuka_remote_controller/issues"
